--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Login</title>
-<link rel="stylesheet" href="style.css">
+  <title>Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <% if (registrationSuccess) { %>
+    <p class="success-message">Registration successful! You can now log in.</p>
+  <% } %>
+
   <h1>Login</h1>
   <form action="/login" method="POST">
     <div>
@@ -17,6 +21,7 @@
     </div>
     <button type="submit">Login</button>
   </form>
+
   <% if (errorMessage) { %>
     <p class="error-message"><%= errorMessage %></p>
   <% } %>
