--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,5 @@
+<!-- register.ejs -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,24 +7,26 @@
 <link rel="stylesheet" href="style.css"> </head>
 <body>
   <h1>Register</h1>
-  <form action="/register" method="POST">
-    <div>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username">
-    </div>
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password">
-    </div>
-    <button type="submit">Register</button>
-  </form>
-  <% if (errors) { %> <ul class="error-messages">
-      <% errors.forEach(error => { %>
-        <li><%= error %></li>
-      <% }) %>
-    </ul>
-  <% } %>
-  <% if (successMessage) { %> <p class="success-message"><%= successMessage %></p>
-  <% } %>
+<form action="/register" method="POST" enctype="application/x-www-form-urlencoded">
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="username">
+
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password">
+
+  <button type="submit">Register</button>
+</form>
+
+<% if (errors && errors.length > 0) { %>
+  <ul class="error-messages">
+    <% errors.forEach(error => { %>
+      <li><%= error %></li>
+    <% }) %>
+  </ul>
+<% } %>
+
+<!-- <% if (successMessage) { %>
+  <p class="success-message"><%= successMessage %></p>
+<% } %> -->
 </body>
 </html>
