--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,5 @@
+<!-- login.ejs -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,9 +23,5 @@
     </div>
     <button type="submit">Login</button>
   </form>
-
-  <% if (errorMessage) { %>
-    <p class="error-message"><%= errorMessage %></p>
-  <% } %>
 </body>
 </html>
